# PFE

./: .coverage  .env  1.9.0  Dockerfile  docker-compose.yml  nlu_engine.py  pyproject.toml  views.json
api/: agentic_rag.py  ambiguity_resolver.py  api_cataloger.py  best_model_xgboost.pkl  cdc_db_triggers.py  cdc_engine.py  cdc_file_watcher.py  cdc_reindexer.py  connection_service.py  cross_source_mapper.py  dashboard_engine.py  data_profiler.py  forecast_agent.py  graphql_relation_saver.py  llm_description_generator.py  llm_engine.py  main.py  metadata_enricher.py  ml_detector.py  multi_query_agent.py  nlu_engine.py  orchestrator.py  pptx_generator.py  precision_agent.py  preference_learner.py  query_engine.py  rag_engine.py  relationship_discovery.py  relationship_discovery.py.bak  repository.py  routes_admin.py  routes_auth.py  schema_versioner.py  schemas.py  semantic_enricher.py  view_parser.py  voice_engine.py
connectors/: factory.py
core/: audit.py  auth.py
notebooks/: .~sprint85_only.ipynb  .~sprint9_benchmark.ipynb  agentic_rag_sprint8.ipynb  agentic_rag_sprint8_85.ipynb  agentic_rag_sprint8_executed.ipynb  benchmark_crag_summary.csv  benchmark_rag_complet.ipynb  best_model_xgboost_03add1dc-754a-476a-bbd5-1e53a05bf8d7.pkl  best_model_xgboost_v2.pkl  corrective_rag_7c.ipynb  fasttext_training.ipynb  fasttext_training_v2.ipynb  graph_rag_visualization.ipynb  graph_relations.csv  graph_stats_tables.csv  ml_relation_detector.ipynb  ml_relation_detector_v6.ipynb  ml_relation_detector_v7.ipynb  ml_relation_detector_v8 (1).ipynb  notebook_01_data_pipeline.ipynb  notebook_02_sarima.ipynb  (+18 more)
(+58 files in other folders)
